# apfel-guides-lab

./: .gitignore  Makefile  README.md  conftest.py  pyproject.toml
outputs/applescript/: 01_oneshot.txt  02_stream.txt  03_json.txt  06_example.txt
outputs/awk/: 01_oneshot.txt  02_stream.txt  03_json.txt  06_example.txt
outputs/bash-curl/: 01_oneshot.txt  02_stream.txt  03_json.txt  06_example.txt
outputs/nodejs/: 01_oneshot.txt  04_errors.txt  06_example.txt
outputs/perl/: 01_oneshot.txt  02_stream.txt  03_json.txt
outputs/php/: 01_oneshot.txt  03_json.txt  04_errors.txt  05_tools.txt  06_example.txt
outputs/python/: 01_oneshot.txt  02_stream.txt  03_json.txt  04_errors.txt  05_tools.txt  06_example.txt
outputs/ruby/: 01_oneshot.txt  03_json.txt  04_errors.txt  06_example.txt
outputs/swift-scripting/: 01_oneshot.txt  02_stream.txt  03_json.txt  04_errors.txt  06_example.txt
outputs/zsh/: 01_oneshot.txt  02_stream.txt  05_tools.txt  06_example.txt
scripts/applescript/: 01_oneshot.applescript  02_stream.applescript  03_json.applescript  04_errors.applescript  05_tools.applescript  06_example.applescript
scripts/awk/: 01_oneshot.sh  02_stream.sh  03_json.sh  04_errors.sh  05_tools.sh  06_example.sh
scripts/bash-curl/: 01_oneshot.sh  02_stream.sh  03_json.sh  04_errors.sh  05_tools.sh  06_example.sh
scripts/nodejs/: 01_oneshot.mjs  02_stream.mjs  (+6 more)
tests/: helpers.py  test_applescript.py  test_awk.py  test_bash_curl.py  test_harness.py  test_nodejs.py  test_perl.py  test_php.py  test_python.py  test_ruby.py  test_swift_scripting.py  test_zsh.py
(+39 files in other folders)
